Stop creating temp files on Windows